<resources>
    <string name="app_name">Horoscopum</string>

    <!-- Home -->
    <string name="read_my_horoscope">Read my horoscope</string>
    <string name="sign_compatibility">Sign compabitility</string>

    <!-- Sign List -->
    <string name="horoscope_list_title">Select your sign</string>

    <!-- Loading View -->
    <string name="loading_text">Loading your horoscope…</string>

    <!-- Compatibility -->
    <string name="compatibility_list_title">Select two signs to see their compatibility today</string>
    <string name="compatibility_button_text">Check compatibility</string>
    <string name="compatibility_results">Compatibility results</string>

    <string name="compatibility_very_low">%1s and %2s are not compatible today…</string>
    <string name="compatibility_low">%1s and %2s are not very compatible today</string>
    <string name="compatibility_mid">%1s and %2s are compatible today</string>
    <string name="compatibility_high">%1s and %2s are very compatible today!</string>

    <!-- TabLayout Strings -->
    <string name="tomorrow">Tomorrow</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>

    <!-- Horoscope Detail -->
    <string name="current_date">Current Date:</string>
    <string name="mood">Mood:</string>
    <string name="lucky_time">Lucky Time:</string>
    <string name="lucky_number">Lucky Number:</string>
    <string name="description">Description</string>
    <string name="sign_icon_animation">sign_icon_animation</string>

    <!-- Error -->
    <string name="error_horoscope_data">Error loading the data, please try again later</string>
    <string name="no_internet_data">You\'re offline, data could not be loaded.</string>
    <string name="no_signs_selected_compatibility">You must select two signs to see their compatibility.</string>

    <!-- Signs -->
    <string name="capricorn">Capricorn</string>
    <string name="capricorn_date" translatable="false">22/12 – 19/01</string>
    <string name="aquarium">Aquarius</string>
    <string name="aquarium_date" translatable="false">20/01 – 18/02</string>
    <string name="pisces">Pisces</string>
    <string name="pisces_date" translatable="false">19/02 – 20/03</string>
    <string name="aries">Aries</string>
    <string name="aries_date">21/03 – 19/04</string>
    <string name="taurus">Taurus</string>
    <string name="taurus_date" translatable="false">20/04 – 20/05</string>
    <string name="gemini">Gemini</string>
    <string name="gemini_date" translatable="false">21/05 – 20/06</string>
    <string name="cancer">Cancer</string>
    <string name="cancer_date" translatable="false">21/06 – 22/07</string>
    <string name="leo">Leo</string>
    <string name="leo_date" translatable="false">23/07 – 22/08</string>
    <string name="virgo">Virgo</string>
    <string name="virgo_date" translatable="false">23/08 – 22/09</string>
    <string name="libra">Libra</string>
    <string name="libra_date" translatable="false">23/09 – 22/10</string>
    <string name="scorpio">Scorpio</string>
    <string name="scorpio_date" translatable="false">23/10 – 21/11</string>
    <string name="sagittarius">Sagittarius</string>
    <string name="sagittarius_date" translatable="false">22/11 – 21/12</string>

</resources>