<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    tools:background="@drawable/stars_background"
    tools:context=".ui.view.detail.SignDataFragment">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:requiresFadingEdge="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/current_date_title"
                style="@style/Sign_Detail_Header"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/current_date"
                android:textAlignment="center"
                app:layout_constraintEnd_toStartOf="@+id/mood_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/current_date_text"
                style="@style/Sign_Detail_Text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center"
                app:layout_constraintEnd_toEndOf="@+id/current_date_title"
                app:layout_constraintStart_toStartOf="@+id/current_date_title"
                app:layout_constraintTop_toBottomOf="@+id/current_date_title"
                tools:text="June 23, 2017" />

            <TextView
                android:id="@+id/mood_title"
                style="@style/Sign_Detail_Header"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/mood"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/current_date_title"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/mood_text"
                style="@style/Sign_Detail_Text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center"
                app:layout_constraintEnd_toEndOf="@+id/mood_title"
                app:layout_constraintStart_toStartOf="@+id/mood_title"
                app:layout_constraintTop_toBottomOf="@+id/mood_title"
                tools:text="Cancer" />

            <TextView
                android:id="@+id/lucky_time_title"
                style="@style/Sign_Detail_Header"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:gravity="center"
                android:text="@string/lucky_time"
                android:textAlignment="center"
                app:layout_constraintEnd_toStartOf="@+id/lucky_number_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/current_date_text" />

            <TextView
                android:id="@+id/lucky_time_text"
                style="@style/Sign_Detail_Text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center"
                app:layout_constraintEnd_toEndOf="@+id/lucky_time_title"
                app:layout_constraintStart_toStartOf="@+id/lucky_time_title"
                app:layout_constraintTop_toBottomOf="@+id/lucky_time_title"
                tools:text="7am" />

            <TextView
                android:id="@+id/lucky_number_title"
                style="@style/Sign_Detail_Header"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:gravity="center"
                android:text="@string/lucky_number"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/lucky_time_title"
                app:layout_constraintTop_toBottomOf="@+id/mood_text" />

            <TextView
                android:id="@+id/lucky_number_text"
                style="@style/Sign_Detail_Text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center"
                app:layout_constraintEnd_toEndOf="@+id/lucky_number_title"
                app:layout_constraintStart_toStartOf="@+id/lucky_number_title"
                app:layout_constraintTop_toBottomOf="@+id/lucky_number_title"
                tools:text="64" />

            <TextView
                android:id="@+id/description_title"
                style="@style/Sign_Detail_Header"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:gravity="center"
                android:text="@string/description"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lucky_time_text" />

            <TextView
                android:id="@+id/description_text"
                style="@style/Sign_Detail_Text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="24dp"
                android:gravity="center"
                android:lineSpacingExtra="8dp"
                android:textAlignment="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/description_title"
                tools:text="It's finally time for you to think about just one thing: what makes you happy. Fortunately, that happens to be a person who feels the same way. Give yourself the evening off. Refuse to be put in charge of anything." />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
